cmake_minimum_required(VERSION 3.0)

project("nw_stack" LANGUAGES CXX)

# building config
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})		#lib
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})		#dll
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}) 	#exe

# install config
set (CMAKE_INSTALL_PREFIX 		${CMAKE_BINARY_DIR}/install)
set (MY_LIB_INSTALL_PATH 		${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
set (MY_BIN_INSTALL_PATH 		${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
set (MY_INCLUDE_INSTALL_PATH 	${CMAKE_INSTALL_PREFIX}/include)

# build
add_subdirectory(src)